# Fast-Point-Cloud-Registration-with-GPUs

./: CMakeLists.txt  ICP_CPU.c  ICP_Standard_updated.cu  ICP_point_to_plane.cu  ICP_point_to_plane_undone.cu  ICP_point_to_point.cu  ICP_standard.cu  README.md  Square.cu  centroid.cu  my_lib.c  my_lib.h
src/: ICP_Standard_updated.cu  ICP_point_to_point.cu  ICP_standard.cu  my_lib.cpp  my_lib.h
src/CUDA/: CPU time complexity_point.cpp  CPU_ICP_point_to-plane.cpp  CPU_ICP_point_to_point.cpp  CPU_time_complexity_plane.cpp  GPU_ICP_point_to_point(not working).cu  GPU_point_to_plane_bunny.cu  GPU_point_to_plane_real.cu  GPU_point_to_point_bunny.cu  GPU_point_to_point_real.cu  GPU_time_complexity_plane.cu  GPU_time_complexity_point.cu  ICP_point_to_plane_clean.cu  ICP_point_to_point_clean.cu  Matching_no_opt.cu  Matching_opt.cu
src/CUDA/csv_files/: Bunny.csv  Bunny_res.csv  CPU_ICP_point_to_plane_TimeComp.csv  CPU_ICP_point_to_point_TimeComp.csv  CPU_Parallel_ICP_point_to_point_TimeComp.csv  Donut_1024x16.csv  GPU_ICP_point_to_plane_TimeComp.csv  GPU_ICP_point_to_point_TimeComp.csv  Matching.csv  Matching_loop_NO_optimized.csv  Matching_loop_optimized.csv  Matching_loop_unroll.csv  Matching_loop_unroll_4.csv  Matching_nosqrt.csv  Matching_pow.csv  Matching_registers.csv  Matching_registers2.csv  beam_intrinsics.csv
src/tests/: centroid.cu
